Infra and code files/kubernetes/upg-load-me/upg-loadme.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: upg-loadme
  namespace: demo
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      containers:
        - name: upg-loadme
          image: '364378418233.dkr.ecr.us-east-1.amazonaws.com/loadme:latest'
          resources:
            requests:
              cpu: 800m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      tolerations:
        - key: feaster
          operator: Equal
          value: "true"
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
             - matchExpressions:
              - key: node-group-type
                operator: In
                values:
                - jitesh-workers
---
kind: Service
apiVersion: v1
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: ClusterIP
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 8081
